features
* (handlers)
    add handleCallbackQuery implementation

refactor

* (models.Handler,models.UpdateReceiver, handlers)
    replace method name handle to handleMessage in Handler